--- a/package.json
+++ b/package.json
@@ -4,22 +4,19 @@
   "description": "codewars challenges in typescript",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "vitest watch",
     "lint": "eslint ."
   },
   "author": "@AnibalDBXD",
   "license": "ISC",
   "dependencies": {
     "@babel/preset-typescript": "^7.15.0",
-    "jest": "^27.0.6",
-    "ts-jest": "^27.0.4",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "eslint-plugin-jest": "^24.4.0",
-    "@types/jest": "^27.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "vitest": "^0.14.2"
   }
 }
