--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/node": "^18.11.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
